@@ -21,3 +21,4 @@ MyMakevars
 /packages/nimble/inst/CppCode/Makeconf
 /packages/nimble/inst/include/cppad/
 
+
