@@ -216,11 +216,11 @@ print: A logical argument specifying whether to print the ordered list of defaul
                         }
                         if(nodeDist == 'dmulti')       { addSampler(target = node, type = 'RW_multinomial');     next }
                         if(nodeDist == 'ddirch')       { addSampler(target = node, type = 'RW_dirichlet');       next }
+                        if(nodeDist == 'dwish')        { addSampler(target = node, type = 'RW_wishart');         next }
+                        if(nodeDist == 'dinvwish')     { addSampler(target = node, type = 'RW_wishart');         next }
                         if(nodeDist == 'dcar_normal')  { addSampler(target = node, type = 'CAR_normal');         next }
                         if(nodeDist == 'dcar_proper')  { addSampler(target = node, type = 'CAR_proper');         next }
                         if(nodeDist == 'dCRP')         { addSampler(target = node, type = 'CRP');                next }
-                        if(nodeDist == 'dwish')        { stop('At present, the NIMBLE MCMC does not provide a sampler for non-conjugate Wishart nodes. Users can implement an appropriate sampling algorithm as a nimbleFunction, for use in the MCMC.') }
-                        if(nodeDist == 'dinvwish')     { stop('At present, the NIMBLE MCMC does not provide a sampler for non-conjugate inverse-Wishart nodes. Users can implement an appropriate sampling algorithm as a nimbleFunction, for use in the MCMC.') }
                         if(multivariateNodesAsScalars) {
                             for(scalarNode in nodeScalarComponents) {
                                 if(onlySlice) addSampler(target = scalarNode, type = 'slice')
@@ -947,18 +947,16 @@ print: Logical argument specifying whether to print the resulting ordered list o
 	    ## dirichlet
             addRule(quote(nodeDistribution == 'ddirch'), 'RW_dirichlet')
             
+	    ## wishart
+            addRule(quote(nodeDistribution == 'dwish'), 'RW_wishart')
+            
+            ## inverse-wishart
+            addRule(quote(nodeDistribution == 'dinvwish'), 'RW_wishart')
+            
             ## CAR models
             addRule(quote(model$getDistribution(node) == 'dcar_normal'), 'CAR_normal')
             addRule(quote(model$getDistribution(node) == 'dcar_proper'), 'CAR_proper')
 
-            ## Wishart
-            addRule(quote(model$getDistribution(node) == 'dwish'),
-                    quote(stop('At present, the NIMBLE MCMC does not provide a sampler for non-conjugate Wishart nodes. Users can implement an appropriate sampling algorithm as a nimbleFunction, for use in the MCMC.')))
-            
-            ## inverse-Wishart
-            addRule(quote(model$getDistribution(node) == 'dinvwish'),
-                    quote(stop('At present, the NIMBLE MCMC does not provide a sampler for non-conjugate inverse-Wishart nodes. Users can implement an appropriate sampling algorithm as a nimbleFunction, for use in the MCMC.')))
-            
             ## multivariate & multivariateNodesAsScalars: univariate RW
             addRule(quote(isMultivariate && multivariateNodesAsScalars),
                     quote(for(scalarNode in model$expandNodeNames(node, returnScalarComponents = TRUE)) {
