@@ -1,5 +1,7 @@
 USER LEVEL CHANGES
 
+-- New "RW_wishart" MCMC sampler, for sampling non-conjugate Wishart and inverse-Wishart nodes.
+
 -- More sophisticated model initialization routine for correctly initializing complex state space models.
 
                             CHANGES IN VERSION 0.6-12 (July 2018)
